fix: updated styles for scrollbar globally

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -331,10 +331,10 @@ input[type="text"]:focus-visible {
   }
 }
 
-body *::-webkit-scrollbar {
-  width: rem(12);
-  height: rem(12);
-}
+// body *::-webkit-scrollbar {
+  // width: rem(12);
+  // height: rem(12);
+// }
 
 body *::-webkit-scrollbar-track {
   box-shadow: none;
@@ -552,11 +552,11 @@ label.form-check-label, label.form-check,label{
   }
 }
 
-.table-responsive {
-  table {
-    min-width: rem(800);
-  }
-}
+// .table-responsive {
+//   table {
+//     min-width: rem(800);
+//   }
+// }
 
 @media (max-width: 1599.98px) {
   .table-responsive-3xl {
